--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -121,58 +121,19 @@
     <div class="ms_body">
         <div class="ms_body_left">
             <ul>
+                {% for image in images %}
+                    <li>
+                    <a href="">
+                        <img src="{{ image.url }}" alt="">
+                        <p class="name">一个好听的名字</p>
+                        <div class="photoby">
+                            <img src="images/camera.jpg " width="10" height="10" alt=""/>
+                            <p>lzh</p>
+                        </div>
+                    </a>
+                </li>
+                {% endfor %}
 
-                <li>
-                    <a href="">
-                        <img src="images/gallery/01.jpg" alt="">
-                        <p class="name">一个好听的名字</p>
-                        <div class="photoby">
-                            <img src="images/camera.jpg " width="10" height="10" alt=""/>
-                            <p>lzh</p>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="images/gallery/02.jpg" alt="">
-                        <p class="name">一个好听的名字</p>
-                        <div class="photoby">
-                            <img src="images/camera.jpg " width="10" height="10" alt=""/>
-                            <p>lzh</p>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="images/gallery/03.jpg" alt="">
-                        <p class="name">一个好听的名字</p>
-                        <div class="photoby">
-                            <img src="images/camera.jpg " width="10" height="10" alt=""/>
-                            <p>lzh</p>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="images/gallery/04.jpg" alt="">
-                        <p class="name">一个好听的名字</p>
-                        <div class="photoby">
-                            <img src="images/camera.jpg " width="10" height="10" alt=""/>
-                            <p>lzh</p>
-                        </div>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="">
-                        <img src="images/gallery/05.jpg" alt="">
-                        <p class="name">一个好听的名字</p>
-                        <div class="photoby">
-                            <img src="images/camera.jpg " width="10" height="10" alt=""/>
-                            <p>lzh</p>
-                        </div>
-                    </a>
-                </li>
             </ul>
         </div>
         <div class="ms_body_center">
