--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -39,7 +39,7 @@
             </div>
             <!-- 中部右侧-->
             <div class="h_top_right">
-                <a href="login.html">登录</a>
+                <a href="{% url 'index:login' %}">登录</a>
                 <a href="regist.html">免费注册</a>
                 <a href="#">购物车</a>
                 <a href="#">我的订单</a>
