--- a/templates/index/register.html
+++ b/templates/index/register.html
@@ -1,47 +1,58 @@
+{% extends "index/index.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>注册</title>
 
-{#    <link rel="stylesheet" href="css/regist.css">#}
+{% block link %}
     <link rel="stylesheet" href="{% static 'css/regist.css' %}">
 {#    <link rel="shortcut icon" href="images/camera.ico">#}
     <link rel="shortcut icon" href="{% static 'images/camera.ico' %}">
-</head>
-<body>
+{% endblock %}
+
+{% block banner %}
+
+{% endblock %}
+{#    <link rel="stylesheet" href="css/regist.css">#}
+
 <!--头部-->
-<div id="reg_header">
+{% block header %}
+    <div id="reg_header">
     <div class="reg_h_center">
         <div class="reg_h_left">
-            <img src="images/logo.png" alt="">
+            <img src="{% static 'images/logo.png' %}" alt="">
             <h3>欢迎注册</h3>
         </div>
     </div>
 </div>
+{% endblock %}
 
+{% block next_button %}
 
-<!--表单内容-->
-<div class="reg_back">
+{% endblock %}
+
+{% block main %}
+    <div class="reg_back">
     <div class="reg_left">
         <p>新用户注册</p>
         <p>USER REGISTER</p>
     </div>
     <div class="reg_center">
         <div class="reg_form">
-            <form action="#" method="post">
+            <form action="" method="post" class="form-contain">
+                {% csrf_token %}
                 <table>
                     <tr>
                         <td class="td_left"><label for="username">用户名</label></td>
                         <td class="td_right"><input type="text" name="username" placeholder="请输入用户名"
-                                                    id="username"></td>
+                                                    id="user_name"></td>
                     </tr>
                     <tr>
                         <td class="td_left"><label for="password">密码</label></td>
                         <td class="td_right"><input type="password" name="password" placeholder="请输入密码"
                                                     id="password"></td>
                     </tr>
+{#                    <tr>#}
+{#                        <td class="td_left"><label for="password_repeat">密码</label></td>#}
+{#                        <td class="td_right"><input type="password" name="password_repeat" placeholder="再次输入密码"></td>#}
+{#                    </tr>#}
                     <tr>
                         <td class="td_left"><label for="Email">Email</label></td>
                         <td class="td_right"><input type="email" name="email" placeholder="请输入Email" id="Email">
@@ -55,7 +66,7 @@
                     <tr>
                         <td class="td_left"><label for="Telphone">手机号</label></td>
                         <td class="td_right"><input type="text" name="telphone" placeholder="请输入您的手机号"
-                                                    id="Telphone"></td>
+                                                    id="mobile"></td>
                     </tr>
                     <tr>
                         <td class="td_left"><label>性别</label></td>
@@ -68,13 +79,15 @@
                         <td class="td_right"><input type="date" name="birthday" id="Birthday"></td>
                     </tr>
                     <tr>
-                        <td class="td_left"><label for="checkcode">验证码</label></td>
-                        <td class="td_right"><input type="text" name="checkcode" id="checkcode">
-                            <img src="images/商城素材/check_code.png" id="img_check"></td>
+                        <td class="td_left"><label for="checkcode" style="position: relative;top: 11px;">验证码</label></td>
+                        <td class="captcha-graph-img"><input type="text" id="input_captcha" name="captcha_graph" class="form-captcha">
+                            <a href="javascript:void(0);" class="captcha-graph-img">
+                              <img src="" alt="验证码" title="点击刷新" id="c" style="position: relative;width: 93px;height: 38px">
+                            </a>
                         <!-- 10.png为验证码图片 -->
                     </tr>
                     <tr>
-                        <td colspan="2" align="center"><input type="submit" value="注册" id="btn_sub"></td>
+                        <td colspan="2" align="center"><input type="submit" value="注册" id="btn_sub" class="register-btn"></td>
                     </tr>
                 </table>
             </form>
@@ -84,5 +97,9 @@
         <p>已有账号?<a href="login.html">立即登录</a></p>
     </div>
 </div>
-</body>
-</html>
+{% endblock %}
+
+{% block script %}
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript"  src="{% static 'js/auth.js' %}"></script>
+{% endblock %}
