--- a/templates/index/register.html
+++ b/templates/index/register.html
@@ -46,8 +46,7 @@
                     </tr>
                     <tr>
                         <td class="td_left"><label for="password">密码</label></td>
-                        <td class="td_right"><input type="password" name="password" placeholder="请输入密码"
-                                                    id="password"></td>
+                        <td class="td_right"><input type="password" placeholder="请输入密码" id="pwd" name="password" class="form-control"></td>
                     </tr>
 {#                    <tr>#}
 {#                        <td class="td_left"><label for="password_repeat">密码</label></td>#}
@@ -101,5 +100,7 @@
 
 {% block script %}
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="{% static 'js/message.js' %}"></script>
+
     <script type="text/javascript"  src="{% static 'js/auth.js' %}"></script>
 {% endblock %}
