--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -297,6 +297,7 @@
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 {#    <script type="text/javascript" src="js/photo.js"></script>#}
     <script type="text/javascript" src="{% static 'js/photo.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/message.js' %}"></script>
     <script>
         $(document).ready(function function_name() {
             changeImg()
