--- a/templates/index/register.html
+++ b/templates/index/register.html
@@ -69,8 +69,8 @@
                     </tr>
                     <tr>
                         <td class="td_left"><label>性别</label></td>
-                        <td class="td_right"><input type="radio" name="gender" value="male" checked> 男
-                            <input type="radio" name="gender" value="female"> 女
+                        <td class="td_right"><input type="radio" name="gender" value="male" checked class="gender"> 男
+                            <input type="radio" name="gender" value="female" class="gender"> 女
                         </td>
                     </tr>
                     <tr>
