--- a/templates/index/login.html
+++ b/templates/index/login.html
@@ -1,4 +1,4 @@
-<!--{% extends 'index/index.html' %}-->
+{% extends 'index/index.html' %}
 {% load static %}
 
 {% block link %}
@@ -10,16 +10,19 @@
 {% block title %}登录{% endblock %}
 <!--头部-->
 {% block header %}
-    <div id="header">
-        <!--头部中间信息-->
-        <div class="h_center">
-            <img src="images/logo.png" alt="logo">
-            <p>欢迎来到胡萝剧场！请先登录 :)</p>
-        </div>
-    </div>
+
+
+
 {% endblock %}
+
+{% block banner %}
+
+
+
+{% endblock %}
+
 <!--中部-->
-{% block login_body %}
+{% block main %}
     <div id="login_body">
         <div class="login_b_center">
             <div class="login_bg">
@@ -46,3 +49,10 @@
         </div>
     </div>
 {% endblock %}
+
+{% block next_button %}
+
+
+
+{% endblock %}
+
