--- a/templates/index/login.html
+++ b/templates/index/login.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block link %}
-    <link rel="shortcut icon" href="{% static 'images/logo3.png' %}">   <!--为网页标题加图标，没加上-->
+    <link rel="shortcut icon" href="{% static 'images/logo.png' %}">   <!--为网页标题加图标，没加上-->
 {#		<link rel="stylesheet" href="css/login.css">#}
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
 {% endblock %}
@@ -27,22 +27,25 @@
         <div class="login_b_center">
             <div class="login_bg">
                 <h2>密码登录</h2>
-                <form action="#" id="login"><!--                //用户名-->
+<!--                <form action="#" id="login">-->
+                <form action="" method="post" class="form-contain">
+                    {% csrf_token %}
+                    <!--                //用户名-->
                     <div class="userName">
-                        <span></span><input type="text" placeholder="  请输入用户名">
+                        <span></span><input type="text" placeholder="  请输入用户名" id="user_name">
                     </div><!--                //密码-->
                     <div class="password">
-                        <span></span><input type="password" placeholder="  请输入密码">
+                        <span></span><input type="password" placeholder="  请输入密码" id="password">
                     </div><!--                //登录按钮-->
                     <div class="login_btn">
                         <a href="index.html">
-                            <input type="button" value="登录">
+<!--                            <input type="button" value="登录" >-->
+                            <input type="submit" value="登录">
                         </a>
                     </div>
                     <div class="forgot_password">
                         <!-- <a href="">忘记密码</a> -->
-                        <a href="regist.html">注册账号</a>
-                        <!-- <a href="1.0/index.html">帮助</a> -->
+                        <a href="">注册账号</a>
                     </div>
                 </form>
             </div>
@@ -56,3 +59,7 @@
 
 {% endblock %}
 
+{% block script %}
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript"  src="{% static 'js/login.js' %}"></script>
+{% endblock %}
