--- a/templates/index/login.html
+++ b/templates/index/login.html
@@ -35,7 +35,7 @@
                         <span></span><input type="text" placeholder="  请输入用户名" id="user_name">
                     </div><!--                //密码-->
                     <div class="password">
-                        <span></span><input type="password" placeholder="  请输入密码" id="password">
+                        <span></span><input type="password" placeholder="  请输入密码" id="password" name="password">
                     </div><!--                //登录按钮-->
                     <div class="login_btn">
                         <a href="index.html">
@@ -60,6 +60,6 @@
 {% endblock %}
 
 {% block script %}
-    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script src="{% static 'js/jq.js' %}"></script>
     <script type="text/javascript"  src="{% static 'js/login.js' %}"></script>
 {% endblock %}
