--- a/templates/index/login.html
+++ b/templates/index/login.html
@@ -45,7 +45,7 @@
                     </div>
                     <div class="forgot_password">
                         <!-- <a href="">忘记密码</a> -->
-                        <a href="">注册账号</a>
+                        <a href="{% url 'index:register' %}">注册账号</a>
                     </div>
                 </form>
             </div>
