--- a/templates/index/login.html
+++ b/templates/index/login.html
@@ -3,16 +3,21 @@
 
 {% block link %}
     <link rel="shortcut icon" href="{% static 'images/logo.png' %}">   <!--为网页标题加图标，没加上-->
-{#		<link rel="stylesheet" href="css/login.css">#}
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
 {% endblock %}
 
-{% block title %}登录{% endblock %}
+{% block title %}<title>登录</title>{% endblock %}
 <!--头部-->
 {% block header %}
-
-
-
+<div id="log_header">
+    <!--头部中间信息-->
+    <div class="log_h_center">
+        <div class="log_h_left">
+            <img src="{% static 'images/logo.png' %}" alt="logo">
+            <p>欢迎来到胡萝剧场！请先登录 :)</p>
+        </div>
+    </div>
+</div>
 {% endblock %}
 
 {% block banner %}
@@ -41,6 +46,7 @@
                         <a href="index.html">
 <!--                            <input type="button" value="登录" >-->
                             <input type="submit" value="登录">
+                            <p>后端返回的状态是：{{ errno }}</p>
                         </a>
                     </div>
                     <div class="forgot_password">
