--- a/templates/index/login.html
+++ b/templates/index/login.html
@@ -68,4 +68,5 @@
 {% block script %}
     <script src="{% static 'js/jq.js' %}"></script>
     <script type="text/javascript"  src="{% static 'js/login.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/message.js' %}"></script>
 {% endblock %}
